# BUPT_edu_llm

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  DEPLOY_GUIDE.md  README.md  index.html  index_new.html  new_index.html  nginx.conf  projects.json  pyproject.toml
docs/: CONTRIBUTING.md  DEPLOY_GUIDE.md  GCP_CLOUDFLARE_SETUP.md
landingpage/: config.js  index.html
landingpage/css/: style.css
landingpage/js/: main.js
nginx/: bupt_edu_llm.conf
projects/alpha_sentiment/: .env.example  README.md  pyproject.toml
projects/alpha_sentiment/backend/: __init__.py  config.py  main.py  scheduler.py
projects/alpha_sentiment/backend/models/: __init__.py  schemas.py
projects/alpha_sentiment/backend/services/: __init__.py  data_fetcher.py  data_generator.py  sentiment.py
projects/alpha_sentiment/docs/: UV_PACKAGE_MANAGEMENT.md
projects/alpha_sentiment/frontend/: index.html
projects/alpha_sentiment/scripts/: __init__.py  deploy.sh  test_proxy.py
projects/alpha_sentiment/tests/: __init__.py  conftest.py
projects/alpha_sentiment/tests/e2e/: __init__.py  conftest.py
projects/alpha_sentiment/tests/integration/: __init__.py  conftest.py  test_akshare.py  test_deepseek.py
projects/alpha_sentiment/tests/unit/: __init__.py  conftest.py  test_data_fetcher.py  test_models.py  test_sentiment.py
projects/sentiment_analysis/: batch_processor.py  config.py  requirements.txt
projects/sentiment_analysis/config/: sentiment_words.json
projects/sentiment_analysis/data/: weekly_test_data_summary.json
projects/solar_news_crawler/: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
projects/solar_news_crawler/backend/: __init__.py  config.py  main.py  scheduler.py
projects/solar_news_crawler/backend/services/: __init__.py  ai_service.py  crawler_service.py  news_service.py  translator_service.py
projects/solar_news_crawler/crawlers/: __init__.py  combined_crawler.py  iea_crawler.py  irena_crawler.py  irena_news_load_more.json  pv_magazine_crawler.py
projects/solar_news_crawler/frontend/: index.html  news_search.html  translated_news.html
projects/solar_news_crawler/scripts/: deploy.sh
projects/solar_news_crawler/solar_news_crawler/: ai_summarizer.py  app.py  iea_crawler.py  pv_magazine_crawler.py  requirements.txt
projects/solar_news_crawler/solar_news_crawler/templates/: news_search.html  translated_news.html
scripts/: health_check.py  start_all.sh  stop_all.sh
sentiment_analysis/: calculator.py  crawler.py  debug_error.py  main.py  processor.py  test_data.py  visualizer.py
sentiment_analysis/data/processed/: processed_20251016.json  processed_20251018.json  processed_20251019.json  processed_20251021.json
sentiment_analysis/data/raw/: eastmoney_20251018.json  tieba_20251016.json  (+9 more)
solar_news_crawler/: combined_crawler.py  master_crawler.py  translator.py
solar_news_crawler/solar_news_crawler/: irena_crawler.py  scheduler.py
(+29 files in other folders)
