[project]
name = "bupt-edu-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.4"]

[dependency-group]
dev = ["pytest>=7.4.2"]
torch = ["torch>=2.0.0"]
solar = [
  "beautifulsoup4==4.12.2",
  "flask==2.3.3",
  "gunicorn>=23.0.0",
  "lxml==4.9.3",
  "requests==2.31.0",
  "schedule==1.2.0",
  "selenium==4.15.0",
  "webdriver-manager==4.0.1",
]

[tool.uv.workspace]
members = ["projects/alpha_sentiment"]
