[project]
name = "solar-news-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.2",
    "flask==2.3.3",
    "gunicorn>=23.0.0",
    "lxml==4.9.3",
    "requests==2.31.0",
    "schedule==1.2.0",
    "selenium==4.15.0",
    "webdriver-manager==4.0.1",
]
